# Agents

Reflection-Agent/: chains.py  pyproject.toml
agent-under-the-hood/: 1_agent_loop_langchain_tool_calling.py  pyproject.toml
rag-gist/: ingestion.py  main.py  pyproject.toml
reAct-agent-function-calling/: main.py  pyproject.toml  react.py
react-search-agent/: main.py  pyproject.toml
