[project]
name = "reflection-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "grandalf>=0.8",
    "isort>=8.0.1",
    "langchain>=1.2.17",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
]
